error_templates/java/test_files/bracket_mismatch_error/test.txt
template: "Java.BracketMismatchError"
---
BracketMismatch.java:7: error: '}' expected
        System.out.println("x is greater than 5.");
        ^
1 error
===